--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.3",
+    "mongodb": "^3.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
